# BioOpti

./: .copier-answers.yml  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
data/: README.md  enzyme_data.json
docs/source/: conf.py
docs/source/api/: bioopti.rst  modules.rst
notebooks/: README.md  project_report.ipynb  test_sabio.ipynb
src/bioopti/: __init__.py  enzyme_kinetics.py  media_optimizer.py  reaction_simulator.py  sabio.py  simulation.py
tests/: test_enzyme_simulation.py  test_example_module.py  test_media_optimizer.py  test_reaction_simulator.py  test_sabio.py
